# miniqmc

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  Doxyfile  README.md  bench.sh  check.sh  exec.sh  exec211.sh  exec221.sh  exec222.sh  exec422.sh  goals.md  miniqmc.settings  notes_perf.md  plot.gp  qmcpack.settings  types.h
src/: .clang-format  CMakeLists.txt  Configuration.h  Devices.h  Devices_HANA.hpp  QMCFutureTypes.hpp  clean_inlining.h  config.h.cmake.in  qmc_common.cpp
src/CUDA/: CUDA_const.h  GPUArray.h  GPUParams.cpp  GPUParams.h  PinnedHostBuffer.hpp
src/Drivers/: CMakeLists.txt  CheckSPOData.hpp  CheckSPOSteps.cpp  CheckSPOSteps.hpp  CheckSPOStepsCUDA.cpp  CheckSPOStepsCUDA.hpp  CheckSPOStepsKOKKOS.cpp  CheckSPOStepsKOKKOS.hpp  ComputationGraph.hpp  Crowd.cpp  Crowd.hpp  CrowdBuffers.hpp  CrowdCUDA.cpp  CrowdCUDA.hpp  CrowdContext.hpp  MiniQMCOptions.cpp  MiniQMCOptions.h  MiniqmcDriver.cpp  MiniqmcDriver.h  MiniqmcDriverFunctions.cpp  MiniqmcDriverFunctions.hpp  MiniqmcDriverFunctionsCUDA.cpp  MiniqmcDriverFunctionsKOKKOS.hpp  MiniqmcDriverFunctionsKokkos.cpp  MiniqmcDriverFunctionsKokkos.hpp  MiniqmcOptions.cpp  MiniqmcOptions.hpp  Mover.cpp  Mover.hpp  Mover_old.hpp  Mover_ref.hpp  Movers.cpp  Movers.hpp  NLPP_NOTE  NonLocalPP.hpp  check_determinant.cpp  check_determinant.h  check_spo.cpp  check_spo.h  check_spo_batched.cpp  (+9 more)
src/Input/: Input.hpp  graphite.hpp  nio.hpp  pseudo.hpp
src/Lattice/: CrystalLattice.cpp  CrystalLattice.h  LatticeAnalyzer.h  LatticeOperations.h  ParticleBConds.h  ParticleBConds3D.h  ParticleBConds3DSoa.h  Uniform3DGridLayout.cpp  Uniform3DGridLayout.h
src/Memory/: DeviceBuffers.hpp
src/Message/: Communicate.h  OpenMP.h
src/Numerics/: .clang-format  BlasThreadingEnv.h  Blasf.h  CMakeLists.txt  Container.h  Containers.h  DeterminantOperators.h  KokkosViewHelpers.h  LinAlgCPU.h  LinAlgCUDA.hpp  LinAlgKokkos.h  LinearFit.h  OhmmsBlas.h  OptimizableFunctorBase.h  PosTransformer.h  my_math.hpp  readme_soa.md
src/OMP_target_test/: OMPMatrix.h  OMPTinyVector.h  OMPVector.h  OMPVectorSoAContainer.h  OMPVectorSoaContainer.h  README  a.out  main.cpp  map_structure.cpp
src/OhmmsPETE/: OhmmsArray.h  OhmmsMatrix.h  OhmmsMatrixOperators.h  OhmmsTinyMeta.h  OhmmsVector.h  OhmmsVectorOperators.h  Tensor.h  TensorOps.h  TinyMatrixOps.h  TinyVector.h  TinyVectorOps.h  TinyVectorTensorOps.h
src/OhmmsSoA/: Container.h  PosTransformer.h  VectorSoaContainer.h
src/OpenMP/: OMPTinyVector.h  OMPVector.h  OMPallocator.hpp  README
src/PETE/: Combiners.h  ForEach.h  OperatorTags.h  PETE.h  Scalar.h  TreeNodes.h
src/Particle/: AsymmetricDistanceTableData.h  CMakeLists.txt  DISTANCE_TABLE_NOTE  DistanceTable.cpp  DistanceTable.h  DistanceTableAA.cpp  DistanceTableAA.h  DistanceTableAB.cpp  DistanceTableBA.h  DistanceTableData.h  DistanceTableData.h.save  DynamicCoordinates.h  FastParticleOperators.h  MCCoords.cpp  MCCoords.hpp  MCWalkerConfiguration.cpp  MCWalkerConfiguration.h  NLPPJob.h  PARTICLE_SET_NOTE  ParticleAttrib.h  ParticleIOUtility.h  ParticleSet.BC.cpp  ParticleSet.cpp  ParticleSet.h  ParticleSetKokkos.h  ParticleSet_builder.cpp  ParticleSet_builder.hpp  RealSpacePositions.h  RealSpacePositionsOMPTarget.h  SimulationCell.h  SoaDistanceTableAA.h  SoaDistanceTableAB.h  SoaDistanceTableBA.h  SymmetricDistanceTableData.h  VirtualParticleSet.cpp  VirtualParticleSet.h  Walker.h
src/ParticleBase/: ParticleAttrib.h  ParticleAttribOps.h  ParticleBase.h  ParticleUtility.h  RandomSeqGenerator.h
src/ParticleIO/: ParticleIOUtility.cpp  ParticleIOUtility.h
src/QMCHamiltonians/: CMakeLists.txt
src/QMCWaveFunctions/: BasisSetBase.h  CMakeLists.txt  DETERMINANT_NOTE  DelayedUpdate.h  Determinant.h  DeterminantDevice.h  DeterminantDeviceImp.cpp  DeterminantDeviceImp.h  DeterminantDeviceImpCPU.cpp  DeterminantDeviceImpCPU.h  DeterminantDeviceImpCUDA.h  DeterminantDeviceImpKOKKOS.cpp  DeterminantDeviceImpKOKKOS.h  DeterminantDeviceImpOMPOL.h  DeterminantHelper.h  DeterminantKokkos.h  DeterminantOMP.h  DeterminantRef.h  DiracDeterminant.cpp  DiracDeterminant.h  DiracDeterminantBase.cpp  DiracDeterminantBase.h  DiracDeterminantRef.cpp  DiracDeterminantRef.h  DiracMatrix.h  EinsplineSPO.hpp  EinsplineSPODevice.hpp  EinsplineSPODeviceImp.hpp  EinsplineSPODeviceImpCPU.cpp  EinsplineSPODeviceImpCPU.hpp  EinsplineSPODeviceImpCUDA.cpp  EinsplineSPODeviceImpCUDA.hpp  EinsplineSPODeviceImpKOKKOS.cpp  EinsplineSPODeviceImpKOKKOS.hpp  EinsplineSPOParams.h  FakeWaveFunction.h  OrbitalBase.cpp  OrbitalBase.h  OrbitalSetTraits.h  RefWaveFunction.cpp  (+26 more)
src/Simulation/: Simulation.hpp  graphite.hpp  nio.hpp
src/Utilities/: CMakeLists.txt  Clock.h  Communicate.cpp  Communicate.h  Configuration.h  DereferenceIterators.hpp  InfoStream.cpp  InfoStream.h  KokkosHelpers.h  NewTimer.cpp  NewTimer.h  OhmmsInfo.cpp  OhmmsInfo.h  OhmmsInform.cpp  OhmmsInform.h  OutputManager.cpp  OutputManager.h  ParallelBlock.hpp  PooledData.h  PrimeNumberSet.h  QMCTypes.h  RandomGenerator.cpp  RandomGenerator.h  ResourceCollection.h  SpeciesSet.cpp  SpeciesSet.h  StdRandom.h  TaskBlock.hpp  Timer.h  TimerManager.cpp  TimerManager.h  UtilityFunctions.h  XMLWriter.cpp  XMLWriter.h  catch_main.cpp  qmcpack_version.cpp  qmcpack_version.h  scalar_traits.h
src/drivers/: CMakeLists.txt  check_spo.cpp  check_wfc.cpp  miniqmc.cpp
src/einspline/: CMakeLists.txt  README  bspline.h  bspline_base.h  bspline_create.c  bspline_create.h  bspline_structs.h  multi_bspline_create.c  multi_bspline_create.cpp  multi_bspline_create.h  multi_bspline_structs.h
src/miniapps/: AoSWaveFunction.cpp  BsplineFunctorSoA.h  CMakeLists.txt  FakeWaveFunction.h  J2OrbitalSoA.h  Mover.hpp  RefWaveFunction.cpp  SoAWaveFunction.cpp  check_distancetables.cpp  check_spo.cpp  check_wfc.cpp  common.hpp  determinant.cpp  determinant.hpp  diff_distancetables.cpp  diff_j1.cpp  diff_j2.cpp  diff_jeeI.cpp  diff_spo.cpp  diff_wfs.cpp  einspline_spo.cpp  einspline_spo.hpp  einspline_spo_nested.cpp  exchange_walker.cpp  graphite.hpp  miniqmc.cpp  nio.hpp  omp4offload.cpp  pseudo.hpp  types.h
src/mpi/: mpi.hpp
(+266 files in other folders)
